# rabbiat

./: Dockerfile  README.md  manage.py  pyproject.toml
handler/: admin.py  models.py  structure_tools.py  urls.py  utils.py  views.py
handler/mcp_server/: clients.py  database.py  prompt.py
handler/migrations/: 0001_initial.py  0002_mcpserver_alter_prompt_structure_result_prompt_mcps.py  0003_alter_mcpserver_options_and_more.py  0004_alter_mcpserver_path_alter_prompt_structure_result.py  0005_alter_prompt_structure_result.py  0006_alter_prompt_structure_result.py  0007_aimodel_family.py  0008_outputresponse.py  0009_prompt_name.py  0010_alter_mcpserver_path_alter_prompt_structure_result.py
handler/templatetags/: mcp_tags.py
rabbiat/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  login.html
